...
        "tesla.charging.start":                    "开始充电",
        "tesla.charging.stop":                     "停止充电",
        "tesla.charging.port_open":                "充电口",
        "tesla.charging.port_close":               "关充电口",
        "tesla.charging.set_amps":                 "充电电流",
        "tesla.security.set_sentry":               "哨兵",
        "tesla.security.door_lock":                "锁车",
        "tesla.security.door_unlock":              "解锁",
        "tesla.security.actuate_frunk":            "前备箱",
        "tesla.security.actuate_trunk":            "后备箱",
        "tesla.closures.window_vent":              "车窗通风",
        "tesla.closures.window_close":             "关车窗",
        "tesla.comfort.set_seat_heater":           "座椅加热",
...
